--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 
+
 <section class="parent">
     <div class="child">
+        <img class="logo" src="BigCreteCrane.bmp" alt="big crete crane logo" width="375vw" height="270vw">
         <h1 >Big Crete Engineering is still under construction</h1>
     </div>
 </section>
