minor edits to the website

--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
     <meta charset="UTF-8">
     <title>Big Crete Engineering</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="diodeAnimation.js"></script>
 </head>
 <body>
 
 
-<section class="parent">
-    <div class="child">
-        <img class="logo" src="BigCreteCrane.bmp" alt="big crete crane logo" width="375vw" height="270vw">
-        <h1 >Big Crete Engineering is still under construction</h1>
-    </div>
-</section>
+<div class="container">
+    <div class="diode"><img src="BigCreteCrane.bmp" width="375px" height="270px"></div>
+</div>
+
+
+<div class="fixed">
+    <img src="BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
+    <h1 >Big Crete Engineering is still under construction</h1>
+</div>
 
 
 
