oh fire I got it to work

--- a/index.html
+++ b/index.html
@@ -2,22 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Big Crete Engineering</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="diodeAnimation.js"></script>
+    <meta name="description" content="Big Crete Engineering is dedicated to the bleeding edge of electronics and design, we live and die on the crete">
+    <title>Big Crete Engineering Homepage</title>
+    <link rel="stylesheet" type="text/css" href="Stylesheets/style.css">
+    <script src="js/three.js"></script>
 </head>
 <body>
 
-
-<div class="container">
-    <div class="diode"><img src="BigCreteCrane.bmp" width="375px" height="270px"></div>
-</div>
-
-
 <div class="fixed">
-    <img src="BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
+    <img src="Assets/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
     <h1 >Big Crete Engineering is still under construction</h1>
 </div>
+
+<a href="main.html">click me</a>
 
 
 
