--- a/main.html
+++ b/main.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Big Crete Engineering</title>
+    <link rel="stylesheet" type="text/css" href="Stylesheets/mainPage.css">
 
 
 </head>
 <body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js" integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow==" crossorigin="anonymous"></script>
-<script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js" integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow==" crossorigin="anonymous"></script>
+    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 
-<script type="module" src="Scripts/externalObject.js"></script>
+    <canvas class="webgl"></canvas>
+
+    <section class="section">
+        <h1>My Portfolio</h1>
+    </section>
+    <section class="section">
+        <h2>My projects</h2>
+    </section>
+    <section class="section">
+        <h2>Contact me</h2>
+    </section>
 
 
-
+    <script type="module" src="Scripts/externalObject.js"></script>
 </body>
 </html>
