--- a/main.html
+++ b/main.html
@@ -11,17 +11,23 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js" integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow==" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 
-    <canvas class="webgl"></canvas>
 
     <section class="section">
-        <h1>My Portfolio</h1>
+        <h1>BIG CRETE PONG</h1>
+        <p>
+
+        </p>
     </section>
     <section class="section">
-        <h2>My projects</h2>
+        <h2>BIG CRETE CLOCK</h2>
     </section>
     <section class="section">
-        <h2>Contact me</h2>
+        <h2>BIG CRETE VOLTAGE CONVERTER</h2>
     </section>
+
+    <canvas class="webgl"></canvas>
+
+
 
 
     <script type="module" src="Scripts/externalObject.js"></script>
