added scroll and clock

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="description" content="Big Crete Engineering is dedicated to the bleeding edge of electronics and design, we live and die on the crete">
     <title>Big Crete Engineering Homepage</title>
     <link rel="stylesheet" type="text/css" href="Stylesheets/style.css">
-    <script src="js/three.js"></script>
+    <script src="Scripts/diodeAnimation.js"></script>
 </head>
 <body>
 
 <div class="fixed">
     <img src="Assets/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
-    <h1 >Big Crete Engineering is still under construction</h1>
+    <h1>Scroll to Enter</h1>
 </div>
 
-<a href="main.html">click me</a>
+<div class="diode" id="Schottky">
+    <img src="Assets/BigCreteDiode.bmp" alt="big crete diode" width="59px" height="124px">
+</div>
 
 
 
