--- a/main.html
+++ b/main.html
@@ -13,16 +13,22 @@
 
 
     <section class="section">
-        <h1>BIG CRETE PONG</h1>
-        <p>
-
+        <h1>BC PONG</h1>
+        <p class="description">
+            FPGA development board with built-in LED matrix display
         </p>
     </section>
     <section class="section">
-        <h2>BIG CRETE CLOCK</h2>
+        <h1>BC CLOCK</h1>
+        <p class="description">
+            Lixie tube clock with brass capacitive touch interface
+        </p>
     </section>
     <section class="section">
-        <h2>BIG CRETE VOLTAGE CONVERTER</h2>
+        <h1>BC VOLTAGE CONVERTER</h1>
+        <p class="description">
+            FPGA development board with built-in LED matrix display
+        </p>
     </section>
 
     <canvas class="webgl"></canvas>
