--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <div class="fixed">
     <img src="Assets/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
-    <h1>Scroll to Enter</h1>
+    <h1><br> Scroll to Enter</h1>
 </div>
 
 <div class="diode" id="Schottky">
