--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
 <div class="fixed">
     <img src="Assets/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
-    <h1 id="entranceText"><br> Scroll to Enter</h1>
+</div>
+<div class="highestLvl">
+    <h1 id="entranceText"> Scroll to Enter</h1>
 </div>
 
 <div class="diode" id="Schottky">
