--- a/main.html
+++ b/main.html
@@ -4,32 +4,105 @@
     <meta charset="UTF-8">
     <title>Big Crete Engineering</title>
     <link rel="stylesheet" type="text/css" href="Stylesheets/mainPage.css">
-
-
+    <script src="Scripts/modal.js"></script>
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js" integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow==" crossorigin="anonymous"></script>
     <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>
 
-
-    <section class="section">
-        <h1>BC PONG</h1>
+    <section class="section" >
+        <h1>BC PONG <button id="btn1">More Info</button></h1>
         <p class="description">
             FPGA development board with built-in LED matrix display
         </p>
     </section>
+
+    <!-- The Modal -->
+    <div id="modal1" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>Big Crete FPGA Development Board</h1>
+            <br>
+            <ul>
+                <li>10Mhz Clock Speed</li>
+                <li>4-Layer stackup</li>
+                <li>Powered and programmed over USB</li>
+                <li>SPI Flash for FPGA configuration</li>
+                <li>10x15 LED Display</li>
+            </ul>
+            <br>
+            <p>The Big Crete FPGA board is built around a low cost iCE40HX1K which requires a minimal amount of parts to operate.
+                The other two major ICs on this board is the USB to UART chip from FTDI which allows the FPGA to be flashed over USB
+                along with a voltage convertor IC which generates the required 3.3V and 1.2V rails from the supplied 5V.
+                This board was programmed to run a simple game of pong fully implemented in digital logic.
+                The full board has a BOM cost of roughly $100 CAD.</p>
+        </div>
+    </div>
+
     <section class="section">
-        <h1>BC CLOCK</h1>
+        <h1>BC CLOCK <button class="b2" id="btn2">More Info</button></h1>
         <p class="description">
             Lixie tube clock with brass capacitive touch interface
         </p>
     </section>
+
+    <!-- The Modal -->
+    <div id="modal2" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>The Big Crete Photonic Display System</h1>
+            <br>
+            <ul>
+                <li>80 RGB LEDs</li>
+                <li>Laser Cut Construction</li>
+                <li>4 Laser cut edge lit acrylic Lixie tubes</li>
+                <li>Brass capacitive touch interface</li>
+                <li>USB-C connection</li>
+                <li>Realtime clock module with battery backup</li>
+                <li>Powered by Arduino</li>
+            </ul>
+            <br>
+            <p>The Big Crete Photonic Display System is a modern take on an old design with some extra big crete twists.
+                The first Lixie tube has 2 numbers with the following panes being emojis which have varying functions from a settings menu to a sleep mode which partially shuts the panes off.
+                The primary funciton of the Big Crete Photonic Display System is to display time and track the amount of days since preset dates.
+                This allows a user to track metrics such as snapchat streaks or days left in the year or week easily at a glance. <br>
+                The brass capacitive touch buttons give a clean interface that won't wear down over time.
+                The lixie panes are designed to be easily swapped should the user want to change the font or icons used. The 80 RGB LEDs are WS2812B parts with 20 LEDs per Lixie bulb.
+                The USB-C power interface gives a modern standard that is reversible and capable of keeping up with the power the BCR-140239 demands.</p>
+        </div>
+    </div>
+
     <section class="section">
-        <h1>BC VOLTAGE CONVERTER</h1>
+        <h1>BC PCS <button class="b3" id="btn3">More Info</button></h1>
         <p class="description">
             FPGA development board with built-in LED matrix display
         </p>
     </section>
+
+    <!-- The Modal -->
+    <div id="modal3" class="modal">
+        <!-- Modal content -->
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <h1>Big Crete FPGA Development Board</h1>
+            <br>
+            <ul>
+                <li>10Mhz Clock Speed</li>
+                <li>4-Layer stackup</li>
+                <li>Powered and programmed over USB</li>
+                <li>SPI Flash for FPGA configuration</li>
+                <li>10x15 LED Display</li>
+            </ul>
+            <br>
+            <p>The Big Crete FPGA board is built around a low cost iCE40HX1K which requires a minimal amount of parts to operate.
+                The other two major ICs on this board is the USB to UART chip from FTDI which allows the FPGA to be flashed over USB
+                along with a voltage convertor IC which generates the required 3.3V and 1.2V rails from the supplied 5V.
+                This board was programmed to run a simple game of pong fully implemented in digital logic.
+                The full board has a BOM cost of roughly $100 CAD.</p>
+        </div>
+    </div>
 
     <canvas class="webgl"></canvas>
 
