--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
 
 <div class="fixed">
-    <img src="Assets/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
+    <img src="Assets/Website-GLB/BigCreteCrane.bmp" alt="big crete crane logo" width="375px" height="270px">
 </div>
 <div class="highestLvl">
     <h1 id="entranceText"> Scroll to Enter</h1>
 </div>
 
 <div class="diode" id="Schottky">
-    <img src="Assets/BigCreteDiode.bmp" alt="big crete diode" width="59px" height="124px">
+    <img src="Assets/Website-GLB/BigCreteDiode.bmp" alt="big crete diode" width="59px" height="124px">
 </div>
 
 
