started work on a blog

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Big Crete Engineering</title>
+    <meta name="description" content="Big Crete Engineering is dedicated to the bleeding edge of electronics and design, we live and die on the crete">
     <link rel="stylesheet" type="text/css" href="Stylesheets/mainPage.css">
     <script src="Scripts/modal.js"></script>
 </head>
@@ -27,6 +28,8 @@
 
 
 <!--    <script src="https://unpkg.com/three/examples/jsm/environments/RoomEnvironment.js"></script>-->
+
+
 
     <section class="section" >
         <h1>BC PONG <button id="btn1">More Info</button></h1>
