--- a/main.html
+++ b/main.html
@@ -8,12 +8,6 @@
     <script src="Scripts/modal.js"></script>
 </head>
 <body>
-<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js" integrity="sha512-yNJzAsg5JyP91u+sLHlUDULMBd3hmEiVkYeeN1cQBKaLZ7EyT6oH2u5THNIRM2Fu6VKcZJv+F/QAp1h/qzy9Ow==" crossorigin="anonymous"></script>-->
-<!--    <script src="https://cdn.rawgit.com/mrdoob/three.js/master/examples/js/loaders/GLTFLoader.js"></script>-->
-<!--    <script src="https://unpkg.com/three@0.129.0/build/three.module.js"></script>-->
-<!--    <script src="https://unpkg.com/three/examples/js/loaders/GLTFLoader.js"></script>-->
-<!--    <script src="https://unpkg.com/three/examples/js/environments/RoomEnvironment.js"></script>-->
-
     <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
 
     <script type="importmap">
@@ -26,10 +20,11 @@
       }
     </script>
 
-
-<!--    <script src="https://unpkg.com/three/examples/jsm/environments/RoomEnvironment.js"></script>-->
-
-
+    <div class="LOGO">
+        <a href="index.html">
+                <img src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" z-index="0" width="10%" height="auto">
+        </a>
+    </div>
 
     <section class="section" >
         <h1>BC PONG <button id="btn1">More Info</button></h1>
