added blog stuff

--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 
     <div class="LOGO">
         <a href="index.html">
-                <img src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" z-index="0" width="10%" height="auto">
+                <img class="HOMELINK" src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="10%" height="auto">
         </a>
     </div>
 
