--- a/Circuit.html
+++ b/Circuit.html
@@ -10,11 +10,30 @@
 
 <!--LINKS: Blog, Projects, About, Under Construction-->
 <!--Blog - blog for projects and other things about me-->
+<!--use the l as wire and run the CC output of a current follower-->
 <!--Projects - completed projects (3D views where more info links to a specific project page) (link at bottom of page goes to older project dump closer to under construction page)-->
+<!--half adder with sum going into flip flop through t on project-->
 <!--About - blurb about me (picture and some text with links) -->
+<!--use the diode in the logo as a super diode which runs to the about with a V in the o for a voltmeter-->
 <!--Under Construction - Projects in development (this contains a list of projects which can be clicked on to see information)-->
+<!--put a group of random components with a confused ikea man -->
 
-<!--The logo needs the "dudes" removed and then for the -->
+<!--The logo needs the "dudes" removed and then for the-->
+
+<!--take the logo and extend the circuit for the nav page -->
+
+<img src="Assets/Website-GLB/Nav%20Page.bmp" alt="Big Crete Nav Page">
+
+<a class="blog" href="blog.html"></a>
+
+<a class="crete" href="index.html"></a>
+
+<a class="projects" href="main.html"></a>
+
+<!--not done yet-->
+<a class="construction" href="construction.html"></a>
+<!--not done yet-->
+<a class="about" href="about.html"></a>
 
 
 
