--- a/blog.html
+++ b/blog.html
@@ -70,7 +70,7 @@
 
     <div class="cards_container">
         <!-- FORMAT
-        <figure style="cursor: pointer;" class="card eng all">
+        <figure style="cursor: pointer;" class="card eng life misc all">
             <a class="portfolio-link">
                 <img src="./assets/*** picture ***" width=100% height=auto>
                 <figcaption>
@@ -117,7 +117,7 @@
         <!-- CARD 20-->
         <!-- CARD 19-->
 
-        <figure style="cursor: pointer;" class="card eng all">
+        <figure style="cursor: pointer;" class="card eng life all ">
             <a class="portfolio-link">
                 <img src="./Assets/Icons/Welcome.png" width=100% height=auto>
                 <figcaption>
@@ -137,58 +137,40 @@
                     </div>
                     <div class="portfolio-content">
                         <div class="text-box">
-                            <p>Hiya neighbour, welcome to the Big Crete Engineering blog. </p>
+                            <p>Hiya neighbour, welcome to the Big Crete Engineering blog. As the first post in many this will act as an introduction to Big Crete, who I am and what to expect from my blog. </p>
                         </div>
                         <div class="image-box">
                             <img class="center-picture sixty-per" src="./Assets/Icons/mrRogers.jpeg">
                         </div>
                         <div class="text-box">
-                            <b>Problem</b>
+                            <b>What is Big Crete?</b>
                         </div>
                         <div class="text-box">
-                            <p>The problem we identified was that the blue collar workforce is shrinking, apprenticeship registration has been declining, and yet the construction industry is growing. In the roofing industry in particular, 39% of expenses are tied up in labor. This increasing cost just gets passed on to the customer, who pays around $10k for a roof replacement. The work is hard, dangerous, and nowadays you have to pay people a lot to do it. There has been almost no innovation in the roofing industry since the air gun 50 years ago.</p>
+                            <p>To explain this will take some time and explaining my personal philosophy with engineering and the role it plays in my own life. I have been passionate about engineering for as long as I can remember and for me that passion comes from how I approach society and life in general. </p>
                         </div>
                         <div class="text-box">
-                            <b>Solution</b>
+                            <p>All living things on this planet are faced with hardship and challenge. Regardless of situation the nature of a finite universe means that creatures will always face challenge, there will always exist things that lay beyond our reach and all creatures work and strive to overcome these obstacles. Humanity is in a unique position where we can artificially augment the world around us to improve our conditions and lives. All people are indebted to those who came before producing the technologies and shaping the world to make our lives that much easier and enjoyable. But the ideal of goal of perfection for all people will likely always remain beyond our reach. To me despite this there is nothing more noble someone can do during their time here than to try and contribute to society helping to improve the lives of others not today but tomorrow and beyond. Scientists, engineers, mathematicians, and many others pursue this goal endlessly. To me engineering in it’s purest is leveraging our understanding of the world around us to practically create things that improve the lives of others. </p>
                         </div>
                         <div class="text-box">
-                            <p>The solution we came up with takes the form of a robot that can hold a stack of shingles, and nail them down automatically. The robot would traverse to a modified shingle elevator (common in the industry) which would load the robot up, it would diagonally drive across the roof, placing a shingle and nailing it in. We hoped that the robot would be able to do at least 80% of the roof as doing dormers, ridges, and valleys seemed too complicated. A roofing company would rent robots from us, while a small crew would go around and do the parts that the robot couldn’t do.</p>
+                            <p>There is an adage give a man a fish, and you feed him for a day. Teach a man to fish you feed him for a lifetime. I think we should expand upon this, give a man a fish you feed him for a day. Teach a man to fish you feed him for a lifetime. Engineer the tools for him to catch beyond his means you feed his town forever. I enjoy my work because it allows me as one person to improve the lives of populations for time to come. The job of the engineer is to be creative and find solutions to the biggest problems we face, ultimately engineers are problem solvers leveraging all the knowledge we have accumulated building things that push humanity forward. </p>
                         </div>
                         <div class="text-box">
-                            <p>A concept of the robot in question is shown below, but not fully realized or designed.</p>
-                        </div>
-
-                        <div class="text-box">
-                            <p>We also had an idea to produce accurate quotes using drones. The idea being that a drone could fly around the roof recording it. This video could be processed with semantic segmentation and VSLAM to estimate the amount of area and complexity of the roof. This would lead to less material waste and more accurate quotes for customers. A concept of what this would look like is shown below:</p>
-                        </div>
-                        <div class="image-box">
-                            <img class="center-picture sixty-per" src="./assets/Roof Segmentation Example.png">
+                            <p>There is an adage give a man a fish, and you feed him for a day. Teach a man to fish you feed him for a lifetime. I think we should expand upon this, give a man a fish you feed him for a day. Teach a man to fish you feed him for a lifetime. Engineer the tools for him to catch beyond his means you feed his town forever. I enjoy my work because it allows me as one person to improve the lives of populations for time to come. The job of the engineer is to be creative and find solutions to the biggest problems we face, ultimately engineers are problem solvers leveraging all the knowledge we have accumulated building things that push humanity forward. </p>
                         </div>
                         <div class="text-box">
-                            <p>One of our assignments in the course was to apply to the Concept 5k pitch competition, which we did. Ethan did a fantastic job at pitching, making it through the semi finals before losing in the finals. You can watch the pitch here: (https://youtu.be/T2CKR_hhoMc?t=2517)</p>
+                            <p>So, circling this back to Big Crete, my passion for engineering and creating things. You now understand my passion and my drive, how I feel I can best contribute to society.  Most engineering is done within companies who produce solutions for the world, it is easily memorable and the art of branding something is a form of marketing. Branding my projects under the Big Crete name gives it a form of authenticity for me and is an exercise in creating things that could be products (mind you most of my projects aren’t practical as products) but none the less it’s working to make things closer to real world solutions than purely academic ones.</p>
                         </div>
                         <div class="text-box">
-                            <b>Reflection</b>
+                            <b>Cool story bro, what about the name?</b>
                         </div>
                         <div class="text-box">
-                            <p>If I’m completely honest, I didn’t expect to learn anything by taking this course. It seemed like an easy credit and maybe I could meet some cool people. But what's special about BET300 is that it forces you to commit to an idea for at least 4 months, similar to a capstone project. You better make sure you like your idea and are willing to put a lot of work into it, and this was great for deeply thinking about roofing as a problem space. I think that we could have done better in 2 main ways, so here's what I learned.</p>
+                            <p>Well, the name is mostly an inside joke but basically it has nothing to do with engineering and is a slang version of concrete. But from there it has taken on more meaning, combining the name with a construction themed logo is meant to convey what I’m all about which is building things. Just like how concrete is an iconic technology of the modern world we live in, I hope that Big Crete will stand for projects equally as pivotal (unlikely, but a boy can dream).</p>
                         </div>
                         <div class="text-box">
-                            <p>You have to get really close to the problem space you want to solve. Even better if it's a problem you personally have. I personally do not have the problem of a roofing job being too expensive. We convinced ourselves really early on that this was a very possible and profitable business, without ever looking at how much labor was actually tied up in nailing shingles. In fact, we still don’t know, because it turns out roofers are hard to talk to. But despite this, we dove in head first. It could have ended up only being 20% of their labor charge and we wouldn’t have realized this until it was too late. Yes we did our groundwork and our research, but we never actually went out to a job site and watched the process. I think the reason we didn’t win Concept 5k was because one of the judges asked “have you ever roofed a house?” and Ethan has to respond with no, and neither have I. It’s easy to criticize things when you aren’t involved in them. Looking back on it, it seems like a silly idea that a modern robot could pull its weight in a fast paced job site. Maybe one day.</p>
+                            <p>I also want to thank Clayton Haight (clayhaight.com) who graciously open sourced his blog format and agreed to let me use it for my own. So, if you are interested in making your own blog and want an easy starting point to feel free to copy this format but make sure to credit Clayton not myself. </p>
                         </div>
                         <div class="text-box">
-                            <p>Your team needs to be on board, and obsessed with the problem. Even though we couldn’t kill the idea, none of us were particularly passionate about the construction industry or roofing. We had no family ties to the business, or any reason to be interested. It just seemed to be a space lacking innovation. When I worked at Matician, the CEO Mehul Nariyawala would always preach that there's a lot of potential for disruption in “un-sexy” industries. No one wants to start a company here or wants to work here, but it's something that has to be done. I think PayPal is a good example, it was an uphill battle to convince people to put their money and banking information on the internet. It required fighting regulators, mountains of paperwork, and bureaucratic nightmares. But the result is a clean and easy solution for personal payment or commercial payment. To me, I see it as one of the “enablers” of startups, of which I have found four:</p>
-                        </div>
-                        <div class="text-box">
-                            <p>
-                                1. No one has thought of it (Tesla, DoorDash, Netflix, Yelp)<br>
-                                2. No one knows how to do it (SpaceX, Neuralink, Boston Dynamics)<br>
-                                3. No one was doing it well enough (Apple, YouTube, Discord, Twitch)<br>
-                                4. No one wants to do it (PayPal, Credit Karma)<br>
-                            </p>
-                        </div>
-                        <div class="text-box">
-                            <p>If you are able to break one of these four statements, you may have a golden ticket, or so I believe. The problem with our team was that we couldn’t find any passion for working on the “un-sexy” problem, and losing the Concept 5k was the last blow.</p>
+                            <p>So welcome to Big Crete, make yourself at home and be sure to check in often and feel free to reach out, I’d love to chat.</p>
                         </div>
                     </div>
                 </div>
@@ -200,14 +182,14 @@
 
     </div>
 </main>
-<!--<footer>-->
-<!--    <hr>-->
-<!--    <ul>-->
-<!--        <li><a href="https://www.linkedin.com/in/claytonhaight/">&#128101 LinkedIn</a></li>-->
-<!--        <li><a href="https://github.com/clayhaight01">&#128187 GitHub</a></li>-->
-<!--        <li><a href="mailto:clayhaight@uwaterloo.ca">&#128236 chaight@uwaterloo.ca</a></li>-->
-<!--    </ul>-->
-<!--</footer>-->
+<footer>
+    <hr>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/ethan-childerhose/">&#128101 LinkedIn</a></li>
+        <li><a href="https://github.com/EthChil">&#128187 GitHub</a></li>
+        <li><a href="mailto:echilder@uwaterloo.ca">&#128236 echilder@uwaterloo.ca</a></li>
+    </ul>
+</footer>
 
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
