added temporary pages for construction and about

--- a/blog.html
+++ b/blog.html
@@ -51,8 +51,8 @@
 <!--    <hr>-->
     <header class="filter_header">
         <div class="LOGO">
-            <a href="index.html">
-                <img class="HOMELINK" src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="50%" height="auto">
+            <a href="circuit.html">
+                <img src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="50%" height="auto">
             </a>
         </div>
 
