--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
     </script>
 
     <div class="LOGO">
-        <a href="index.html">
+        <a href="circuit.html">
                 <img class="HOMELINK" src="Assets/Website-GLB/BigCreteLOGO.bmp" alt="big crete crane logo" width="10%" height="auto">
         </a>
     </div>
