--- a/construction.html
+++ b/construction.html
@@ -17,6 +17,39 @@
 </header>
 
 
+<!-- Ideas for my under construction website -->
+<!-- In progress projects each take up the width of the screen and you can scroll through them
+     any given one has an image along with a quick descriptor of what it's about-->
+
+<!--modals to implement-->
+<!--big crete pcb chip thingy-->
+<!--big crete calculator-->
+<!--big crete ray tracer-->
+<!--bracket bot Big Crete x Big Brocc x Big Clay production-->
+
+<!--
+vim things to do
+chat app in vim
+music player in vim
+
+each one should have the title at the top
+- a quick description of what it is
+- a quick list of project facts
+- a list of upcomming project goals with target dates
+- a calendar list of when things were fixed in a journal format with the date it was implented and a writeup about that feature
+
+new idea 
+- a construction site with links in the center for the projects which go to dedicated pages for them
+maybe its a building and the windows are the project links
+- for now just put the links in the center of the screen
+-->
+
+<!-- <img src="Assets/Website-GLB/Nav%20Page.bmp" alt="Big Crete Nav Page"> -->
+
+<a class="big-chip"   href="./ConstructionPages/big-chip.html">Big Crete Big Chip</a>
+<a class="calculator" href="./ConstructionPages/calculator.html">Big Crete Calculator</a>
+<a class="raytracer"  href="./ConstructionPages/ray-tracer.html">Big Crete Silicon Raytracer</a>
+<a class="bracket"    href="./ConstructionPages/bracket-bot.html">Bracket Bot</a>
 
 </body>
 </html>
