--- a/construction.html
+++ b/construction.html
@@ -48,7 +48,7 @@ maybe its a building and the windows are the project links
 
 <a class="big-chip"   href="./ConstructionPages/big-chip.html">Big Crete Big Chip</a>
 <a class="calculator" href="./ConstructionPages/calculator.html">Big Crete Calculator</a>
-<a class="raytracer"  href="./ConstructionPages/ray-tracer.html">Big Crete Silicon Raytracer</a>
+<a class="raytracer"  href="./ConstructionPages/ray-tracer.html">Big Crete Raytracer</a>
 <a class="bracket"    href="./ConstructionPages/bracket-bot.html">Bracket Bot</a>
 
 </body>
